<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Aard 2</string>
    <string name="subtitle_lookup">Lookup</string>
    <string name="subtitle_bookmark">Bookmarks</string>
    <string name="subtitle_history">History</string>
    <string name="subtitle_dictionaries">Dictionaries</string>
    <string name="action_find_dictionaries">Find Dictionaries</string>
    <string name="action_find_in_page">Find in page</string>
    <string name="action_bookmark_article">Bookmark</string>
    <string name="action_filter">Filter</string>
    <string name="action_ascending">Ascending</string>
    <string name="action_descending">Descending</string>
    <string name="action_sort_by_title">By Title</string>
    <string name="action_sort_by_time">By Time</string>
    <string name="action_lookup">Lookup</string>
    <!--
    English only uses "one" and "other" for plurals.
    Other quantities are included as a fallback if some translation
    is missing a quantity used in that language, otherwise the app will crash
    -->
    <plurals name="dict_item_count">
        <item quantity="zero">%,d items</item>
        <item quantity="one">%,d item</item>
        <item quantity="two">%,d items</item>
        <item quantity="few">%,d items</item>
        <item quantity="many">%,d items</item>
        <item quantity="other">%,d items</item>
    </plurals>

    <string name="action_zoom_out">Zoom Out</string>
    <string name="action_zoom_in">Zoom In</string>
    <string name="action_zoom_reset">Zoom Reset</string>
    <string name="action_select_style">Style…</string>
    <string name="select_style">Select style</string>
    <string name="default_style_title">Default</string>
    <string name="subtitle_settings">Settings</string>
    <string name="setting_remote_content_always">Always</string>
    <string name="setting_remote_content_wifi">When on Wi-Fi</string>
    <string name="setting_remote_content_never">Never</string>
    <string name="setting_remote_content">Load Remote Content</string>
    <string name="setting_about">About %1$s</string>
    <string name="application_home_url" translatable="false">https://aarddict.org</string>
    <string name="application_copyright" translatable="false">Igor Tkach</string>
    <string name="application_license_name" translatable="false">GNU General Public License v3</string>
    <string name="application_license_url" translatable="false">https://gnu.org/licenses/gpl.html</string>
    <string name="application_license" translatable="false">
        <![CDATA[
            <a href="%1$s">%2$s</a>
        ]]>
    </string>
    <string name="application_version">Version %1$s</string>
    <string name="setting_clear_cache">Clear Cache</string>
    <string name="setting_clear_cache_subtitle">Delete cached content including remote images</string>
    <string name="confirm_clear_cached_content">Clear cached content?</string>
    <string name="article_collection_nothing_found">Nothing found</string>
    <string name="article_collection_selected_not_available">Selected article is not available</string>
    <string name="article_collection_nothing_to_lookup">Nothing to look up</string>
    <string name="article_view_msg_not_found">Not found</string>
    <string name="dictionaries_please_wait">Please wait</string>
    <string name="dictionaries_scanning_device">Scanning device for dictionaries…</string>
    <string name="dictionaries_confirm_forget">Forget "%1$s"?</string>
    <string name="lookup_nothing_found">Nothing found</string>
    <string name="main_empty_bookmarks">No bookmarks</string>
    <string name="main_empty_history">No history</string>
    <string name="main_empty_dictionaries">No dictionaries</string>
    <string name="delete">Delete</string>

    <plurals name="confirm_delete_bookmark_count">
        <item quantity="zero">%,d bookmarks</item>
        <item quantity="one">%,d bookmark</item>
        <item quantity="two">%,d bookmarks</item>
        <item quantity="few">%,d bookmarks</item>
        <item quantity="many">%,d bookmarks</item>
        <item quantity="other">%,d bookmarks</item>
    </plurals>
    <plurals name="confirm_delete_history_count">
        <item quantity="zero">%,d history records</item>
        <item quantity="one">%,d history record</item>
        <item quantity="two">%,d history records</item>
        <item quantity="few">%,d history records</item>
        <item quantity="many">%,d history records</item>
        <item quantity="other">%,d history records</item>
    </plurals>

    <string name="blob_descriptor_confirm_delete">Delete %1$s?</string>
    <string name="msg_failed_to_read_file">Failed to read file</string>
    <string name="msg_file_too_big">File is too big</string>
    <string name="setting_user_styles">User Styles</string>
    <string name="setting_user_styles_empty">No styles</string>
    <string name="msg_failed_to_store_user_style">Failed to store user style</string>
    <string name="setting_user_style_confirm_forget">Forget %1$s?</string>
    <string name="msg_file_not_css">Doesn\'t appear to be a CSS file</string>
    <string name="msg_no_activity_to_get_content">No activity is available to open file</string>
    <string name="action_add_dictionaries">Add</string>
    <string name="title_activity_file_select">Select Dictionary File</string>
    <string name="action_goto_parent_dir">Up</string>
    <string name="action_reload_directory">Reload</string>
    <string name="msg_dictionary_already_open">Already open</string>
    <string name="msg_dictionary_added">Added dictionary from %1$s</string>
    <string name="setting_fav_random_search">Use only favorite dictionaries for random lookup</string>
    <string name="article_collection_invalid_link">Invalid link</string>
    <string name="setting_ui_theme">User Interface Style</string>
    <string name="setting_ui_theme_light">Light</string>
    <string name="setting_ui_theme_dark">Dark</string>
    <string name="action_load_remote_content">Load Remote Content</string>
    <string name="auto_style_title">Auto</string>
    <string name="action_fullscreen">Full Screen</string>
    <string name="setting_use_volume_for_nav">Use volume buttons for navigation</string>
    <string name="setting_auto_paste">Auto-paste from clipboard</string>
    <string name="find_hint">Find in page</string>
    <string name="find_next">Next</string>
    <string name="find_previous">Previous</string>
    <string name="setting_ui_theme_auto">Auto</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="setting_enable_force_dark_web_view">Enable force dark in webview in dark mode</string>
    <string name="setting_disable_javascript_title">Disable JavaScript</string>
    <string name="setting_disable_javascript_subtitle">Disabling JavaScript has unintended side effects such as applying custom styles and loading remote contents.</string>
    <string name="specified_number_of_items_selected">%d selected</string>
    <string name="action_open_random_article">Random article</string>
</resources>
