<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation destinations. Icons are set programmatically from
     IconMaker (Phosphor) in MainActivity; the titles are here for accessibility
     (content description / long-press tooltip) even though the bar itself is
     icon-only (labelVisibilityMode unlabeled). -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_lookup"
        android:title="@string/subtitle_lookup" />
    <item
        android:id="@+id/nav_bookmarks"
        android:title="@string/subtitle_bookmark" />
    <item
        android:id="@+id/nav_history"
        android:title="@string/subtitle_history" />
    <item
        android:id="@+id/nav_dictionaries"
        android:title="@string/subtitle_dictionaries" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/subtitle_settings" />
</menu>
