<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- app: namespace, not android:: since MainActivity is an AppCompatActivity
         its options menu is inflated by AppCompat's SupportMenuInflater, which
         reads app:actionLayout / app:showAsAction. With the android: spellings
         the filter's action view never inflates (getActionView() is null). -->
    <item
        android:id="@+id/action_filter"
        app:actionLayout="@layout/action_filter"
        app:showAsAction="always|collapseActionView"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_sort_asc"
        android:title="@string/action_ascending"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sort_order"
        android:title="@string/action_descending"
        app:showAsAction="ifRoom"/>

</menu>
