<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/setting_remote_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_name">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_remote_content_always"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:text="@string/setting_remote_content_always" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_remote_content_wifi"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:text="@string/setting_remote_content_wifi" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_remote_content_never"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:text="@string/setting_remote_content_never" />

    </RadioGroup>


</androidx.appcompat.widget.LinearLayoutCompat>
