<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/setting_ui_theme" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_name">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_ui_theme_light"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:text="@string/setting_ui_theme_light" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_ui_theme_dark"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:text="@string/setting_ui_theme_dark" />

    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>
