<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dip"
    android:paddingLeft="8dip"
    android:paddingRight="8dip"
    android:paddingTop="6dip"
    android:clickable="false"
    >

    <!-- Section header, matching the other Settings sections (Clear Cache etc.). -->
    <TextView
        android:id="@+id/setting_about"
        style="@style/TextAppearance.Aard2.ListTitle"
        android:text="@string/setting_about_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dip"
        android:textSize="20sp"/>

    <!-- Logo + app name + version, the identity block for the section. Sized to
         its content and centred horizontally (the detail rows below stay left
         justified). Logo left, name over version to its right, centred against
         that two-line block. -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        >

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/aard2"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/application_name"
                style="@style/TextAppearance.Aard2.ListTitle"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/application_version"
                style="@style/TextAppearance.Aard2.ListSubtitle"
                android:text="@string/application_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="14dip"
        android:layout_marginLeft="14dip"
        >

        <ImageView
            android:id="@+id/setting_about_copyright_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/application_copyright"
            style="@style/TextAppearance.Aard2.ListSubtitle"
            android:text="@string/application_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="14dip"
        android:layout_marginLeft="14dip"
        >
        <ImageView
            android:id="@+id/setting_about_license_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            />
        <TextView
            android:id="@+id/application_license"
            style="@style/TextAppearance.Aard2.ListSubtitle"
            android:text="@string/application_license_name"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="14dip"
        android:layout_marginLeft="14dip"
        >

        <ImageView
            android:id="@+id/setting_about_source_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            style="@style/TextAppearance.Aard2.ListSubtitle"
            android:text="@string/application_home_url"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            />

    </LinearLayout>


</LinearLayout>
